--- a/agendaUI/fm_pesquisa.ui
+++ b/agendaUI/fm_pesquisa.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>fm_pesquisacontatos</class>
- <widget class="QDialog" name="fm_pesquisacontatos">
+ <class>fm_pesquisa</class>
+ <widget class="QDialog" name="fm_pesquisa">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>608</width>
+    <width>628</width>
     <height>304</height>
    </rect>
   </property>
@@ -28,8 +28,8 @@
     <rect>
      <x>10</x>
      <y>30</y>
-     <width>578</width>
-     <height>26</height>
+     <width>602</width>
+     <height>27</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -65,7 +65,7 @@
      <x>10</x>
      <y>260</y>
      <width>168</width>
-     <height>26</height>
+     <height>27</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
